# imengine

./: .gitignore  CMakeLists.txt  online_status_server.h
biz_model/: CMakeLists.txt  app_model.cc  app_model.h  base_biz_model_data.h  biz_models.pb.cc  biz_models.pb.h  biz_models.proto  group_model.cc  group_model.h  history_message_model.cc  history_message_model.h  message_model.cc  message_model.h  model_main_manager.cc  model_main_manager.h  model_module.h  online_status_model.cc  online_status_model.h  sequence_model.cc  sequence_model.h  user_dialog_model.cc  user_dialog_model.h  user_message_model.cc  user_message_model.h  user_model.cc  user_model.h
client/client/: CMakeLists.txt  client.cc  client_command_handler.cc  client_handler.h
clientsdk/core/core/: zproto_task_manager.cc  zproto_task_manager.h
conf/: client.json  service.json
dal/: CMakeLists.txt  base_dal.h  group_dao.h  group_dao_impl.cc  group_dao_impl.h  group_user_dao.h  group_user_dao_impl.cc  group_user_dao_impl.h  history_message_dao_impl.cc  online_status_dao_impl.cc  seq_updates_ngen_dao_impl.cc  sequence_dao.h  sequence_dao_impl.cc  sequence_dao_impl.h  user_dao.h  user_dao_impl.cc  user_dao_impl.h  user_dialog_dao.h  user_dialog_dao_impl.cc  user_dialog_dao_impl.h  user_do.h  user_message_dao_impl.cc  user_sequence_dao_impl.cc  user_sequence_dao_impl.h
proto/: CMakeLists.txt  api_message_box.h  base_message_types_util.h
proto/api/: error_codes.h
proto/api/cc/: api_method_ids.pb.cc  api_method_ids.pb.h  auth.pb.cc  auth.pb.h  configs.pb.cc  configs.pb.h  counters.pb.cc  counters.pb.h  device.pb.cc  device.pb.h  dialogs.pb.cc  dialogs.pb.h  files.pb.cc  files.pb.h  group_base.pb.cc  group_base.pb.h  groups.pb.cc  groups.pb.h  invites.pb.cc  invites.pb.h  messaging.pb.cc  messaging.pb.h  messaging_base.pb.cc  messaging_base.pb.h  misc.pb.cc  misc.pb.h  peers.pb.cc  peers.pb.h  privacy.pb.cc  privacy.pb.h  sequence.pb.cc  sequence.pb.h  sequence_base.pb.cc  sequence_base.pb.h  stats.pb.cc  stats.pb.h  types.pb.cc  types.pb.h  users.pb.cc  users.pb.h  (+2 more)
proto/api/proto/: auth.proto  configs.proto  counters.proto  device.proto  dialogs.proto  group_base.proto  groups.proto  messaging.proto  messaging_base.proto  misc.proto  peers.proto  sequence.proto  sequence_base.proto  users.proto
proto/s2s/cc/: presences.pb.cc  presences.pb.h  servers.pb.cc  servers.pb.h
proto/zproto/: zproto_api_message_types.h  zproto_message_types_util.h
proto/zproto/cc/: auths.pb.cc  auths.pb.h  bases.pb.cc  bases.pb.h  biz_servers.pb.cc  biz_servers.pb.h  files.pb.cc  files.pb.h  groups.pb.cc  groups.pb.h  messages.pb.cc  messages.pb.h  method_types.pb.cc  method_types.pb.h  servers.pb.cc  servers.pb.h
proto/zproto/proto/: auths.proto  bases.proto  biz_servers.proto  groups.proto  messages.proto  method_types.proto  servers.proto
server/: CMakeLists.txt
server/auth/: CMakeLists.txt  auth_server.cc  auth_server.h  auth_service_impl.cc  auth_service_impl.h  rpc_auth_service.cc  rpc_auth_service.h  zrpc_auth_dispatcher.cc  zrpc_auth_dispatcher.h  zrpc_auth_service.cc  zrpc_auth_service.h
server/base/: base_zrpc_service.cc  base_zrpc_service.h  message_handler_util.h
server/biz_model/: sequence_model.cc
server/client/: client_command_handler.cc
server/dal/: group_dao_impl.cc  group_user_dao_impl.cc  history_message_dao_impl.cc  user_dialog_dao_impl.cc  user_sequence_dao.h  user_sequence_dao_impl.cc
server/gate/: CMakeLists.txt  gate_handler.cc  gate_handler.h  gate_server.cc  gate_server_handler.cc  gate_server_util.h  push_channel_client_handler.cc
server/messenger/: CMakeLists.txt  dialog_service_impl.cc  dialog_service_impl.h  groups_service_impl.cc  groups_service_impl.h  messaging_service_impl.cc  messaging_service_impl.h  messenger_server.cc  messenger_server.h  messenger_service_impl.cc  messenger_service_impl.h  rpc_messenger_service.cc  rpc_messenger_service.h  sequence_service_impl.cc  sequence_service_impl.h  weak_service_impl.cc  weak_service_impl.h  zrpc_dialog_service.cc  zrpc_dialog_service.h  zrpc_groups_service.cc  zrpc_groups_service.h  zrpc_messaging_service.cc  zrpc_messaging_service.h  zrpc_messenger_dispatcher.cc  zrpc_messenger_dispatcher.h  zrpc_messenger_service.cc  zrpc_messenger_service.h
server/online/: CMakeLists.txt  http_online_service.cc  http_online_service.h  online_session_manager.cc  online_session_manager.h  online_status_server.cc  online_status_server.h  rpc_online_service.cc  rpc_online_service.h  zrpc_online_dispatcher.cc
server/push/: CMakeLists.txt  gate_channel_handler.cc  push_server.cc  push_server.h  push_service_impl.cc  push_service_impl.h  zrpc_push_dispatcher.cc  zrpc_push_dispatcher.h  zrpc_push_service.cc  zrpc_push_service.h
